# omem

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  LICENSE  Makefile  README.md  README_CN.md  docker-compose.prod.yml  docker-compose.yml
.cargo/: config.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
docs/: AGENTS.md  API.md  DEPLOY.md  DESIGN.md  PIPELINE.md  PLUGINS.md  bootstrap-skill.md
eval/: README.md  run_benchmark.sh
eval/datasets/: sample_conversations.json
eval/provider/: omem_provider.py
omem-server/: Cargo.toml
omem-server/src/: main.rs
omem-server/src/api/: mod.rs  router.rs  server.rs
omem-server/src/api/handlers/: files.rs  github.rs  imports.rs  memory.rs  mod.rs  profile.rs  sharing.rs  stats.rs  tenant.rs
omem-server/src/ingest/: extractor.rs  intelligence.rs  prompts.rs  reconciler.rs  session.rs  types.rs
omem-server/src/store/: lancedb.rs  spaces.rs
plugins/claude-code/: .mcp.json  README.md
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/hooks/: common.sh  hooks.json  pre-compact.sh  session-start.sh  stop.sh
plugins/claude-code/skills/memory-recall/: SKILL.md  instructions.md
plugins/claude-code/skills/memory-store/: SKILL.md  instructions.md
plugins/mcp/: README.md  package.json  tsconfig.json
plugins/mcp/src/: client.ts  index.ts  tools.ts
plugins/openclaw/: package.json
plugins/openclaw/src/: client.ts  context-engine.ts  hooks.ts  index.ts  server-backend.ts  tools.ts  types.ts
plugins/opencode/: omem.example.jsonc  package.json  tsconfig.json
plugins/opencode/src/: client.ts  hooks.ts  index.ts  keywords.ts  privacy.ts  tags.ts  tools.ts
skills/ourmem/: SKILL-web.md  SKILL.md
skills/ourmem/references/: api-quick-ref.md  hosted-setup.md  selfhost-setup.md
