[package]
name = "omem-server"
version = "0.3.1"
edition = "2021"

[[bin]]
name = "omem-server"
path = "src/main.rs"

[features]
default = ["bedrock"]
bedrock = ["dep:aws-sdk-bedrockruntime", "dep:aws-config"]

[dependencies]
# HTTP framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
thiserror = "2"

# Identifiers & time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Vector database
lancedb = { version = "0.27", features = ["aws", "oss"] }
arrow = "57"
arrow-array = "57"
arrow-schema = "57"
lance-index = "3.0"

# Async
async-trait = "0.1"
futures = "0.3"

# AWS (optional - disabled for musl builds to avoid aws-lc-sys SEGV)
aws-sdk-bedrockruntime = { version = "1", optional = true }
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }

# HTTP client
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider"] }

rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }

# Crypto
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Regex
regex = "1"

# Multimodal: PDF extraction
pdf-extract = "0.10"

# Multimodal: Code AST parsing (tree-sitter)
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"

# Multipart file upload
axum-extra = { version = "0.10", features = ["multipart"] }

# Temp files (used by multimodal processors at runtime)
tempfile = "3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
